[package]
name = "keyberon-layout-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
#serde-json-core = "0.5"
serde_json = "1.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon", branch = "master" }
