[package]
name = "keyberon-layout-serde"
version = "0.1.0"
edition = "2021"
authors = ["Boris Faure <boris@fau.re>"]
license = "BSD-2-Clause"
keywords = ["junit", "xml", "parser"]
readme = "README.md"
description = "Rust library to convert QMK layout files into Keyberon files"
repository = "https://github.com/borisfaure/keyberon-layout-serde"
documentation = "https://docs.rs/keyberon-layout-serde/"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon", branch = "master" }
log = "0.4"
